# Merlint

./: Cargo.toml  LICENSE  README.md  example_trace.json  install.ps1  install.sh  self_analysis_trace.json
.github/workflows/: release.yml
assets/: pricing.json
bench/: ab_real_tasks.py  ab_real_tasks_results.json  ab_session.py  ab_session_results.json  ab_test.py  ab_test_kimi.py  ab_test_results.json  session_chart.py
docs/: architecture.mmd
src/: banner.rs  config.rs  error.rs  lib.rs  main.rs
src/analyzer/: cache.rs  efficiency.rs  mod.rs  token.rs
src/commands/: analyze.rs  daemon.rs  dashboard.rs  helpers.rs  mod.rs  monitor.rs  profile.rs  proxy.rs  query.rs  report.rs  scan.rs  spend.rs  up.rs
src/deep/: analyze.rs
src/history/: db.rs
src/models/: api.rs  mod.rs  trace.rs
src/optimizer/: applier.rs  config.rs  mod.rs  plan.rs  prompt.rs  tools.rs
src/parser/: claude_code.rs  codex.rs  discover.rs  mod.rs
src/profile/: engine.rs
src/proxy/: cost.rs  dashboard.html  mod.rs  notify.rs  server.rs  session_store.rs  spend_log.rs  transformer.rs
src/report/: json.rs  terminal.rs
src/util/: format.rs
tests/: e2e_integration.py  e2e_upstream.py  file_cache_scenarios.rs  proxy_server.rs
tests/long_task/: mock_anthropic.py  run_test.sh
