[package]
name = "agentbench"
version = "0.1.0"
edition = "2021"
description = "Agent execution efficiency analyzer - token consumption, cache hits, and performance benchmarking"
license = "MIT"
repository = "https://github.com/user/agentbench"
readme = "README.md"
keywords = ["agent", "benchmark", "llm", "proxy", "token"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "agentbench"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
