[package]
name = "merlint"
version = "0.1.7"
edition = "2021"
description = "Agent token optimizer — diagnose, optimize, and monitor LLM agent efficiency"
license = "MIT"
repository = "https://github.com/Link817290/Merlint"
readme = "README.md"
keywords = ["agent", "lint", "llm", "token", "optimizer"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "merlint"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"
